http://bugs.sakaiproject.org/jira/browse/SAK-19034
git-svn-id: https://source.sakaiproject.org/svn/entitybroker/branches/sakai_2-6-x@81727 66ffb92e-73f9-0310-93c1-f5514f145a0a