@@ -19,22 +19,22 @@
         (Entity Producers and Entities) and entities created using entity providers are
         accessible in Sakai as if they were created using the legacy system. Send feedback
         or comments to Aaron Zeckoski (azeckoski@gmail.com, aaronz@vt.edu) </description>
-    <version>1.3.6.3-SNAPSHOT</version><!--entitybroker.version-->
-<!-- Sakai master pom is parent -->
+    <version>1.3.6.3-SNAPSHOT</version>
+
     <parent>
-        <artifactId>master</artifactId>
-        <groupId>org.sakaiproject</groupId>
-        <version>2.6-SNAPSHOT</version>
-<!--        <version>2.5.2</version>-->
-<!--        <version>M2</version>--><!-- 2.5.x -->
-        <relativePath>../master/pom.xml</relativePath>
+        <groupId>org.sakaiproject.purepoms</groupId>
+        <artifactId>sakai-basic-tool</artifactId>
+        <version>2.6.3</version>
     </parent>
+
     <properties>
         <spring.mock.version>2.0.6</spring.mock.version>
         <hsqldb.version>1.8.0.5</hsqldb.version>
         <easymock.version>2.0</easymock.version>
+        <url.localsite>scp://source.sakaiproject.org/var/www/html/release/entitybroker/${project.version}</url.localsite>
     </properties>
-<!-- Define the modules that are part of this -->
+    
+    <!-- Define the modules that are part of this -->
     <profiles>
         <profile>
             <id>full</id>
@@ -90,7 +90,12 @@
             </modules>
         </profile>
     </profiles>
-<!-- Project developers -->
+    
+    <issueManagement>
+        <system>JIRA</system>
+        <url>http://jira.sakaiproject.org/jira/browse/SAK</url>
+    </issueManagement>
+    
     <developers>
         <developer>
             <id>aaronz@vt.edu</id>
@@ -119,14 +124,83 @@
             <timezone>0</timezone>
         </developer>
     </developers>
+    
+    <scm>
+        <connection>scm:svn:https://source.sakaiproject.org/svn/entitybroker/branches/sakai_2-6-x</connection>
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/entitybroker/branches/sakai_2-6-x</developerConnection>
+        <url>https://source.sakaiproject.org/viewsvn/entitybroker/</url>
+    </scm>
+    
+    <distributionManagement>
+        <downloadUrl>http://source.sakaiproject.org/maven2/</downloadUrl>
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven-snapshots-scp</id>
+            <name>Sakai snapshot Repo</name>
+            <url>scp://source.sakaiproject.org/var/www/html/maven2-snapshots</url>
+            <layout>default</layout>
+        </snapshotRepository>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven2-scp</id>
+            <name>Sakai maven2 repository</name>
+            <url>scp://source.sakaiproject.org/var/www/html/maven2</url>
+            <layout>default</layout>
+        </repository>
+        <site>
+            <id>sakai-site</id>
+            <name>Sakai release Site</name>
+            <url>${url.localsite}</url>
+        </site>
+    </distributionManagement>
+    
+    <pluginRepositories>
+        <pluginRepository>
+            <id>Sakai Plugin Repo</id>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>maven2-central-repo</id>
+            <name>Maven2 Central Repo</name>
+            <url>http://repo1.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                 <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
     <repositories>
         <repository>
             <id>sakai-maven</id>
             <name>Sakai Maven Repo</name>
             <layout>default</layout>
             <url>http://source.sakaiproject.org/maven2</url>
-            <snapshots>
+            <releases>
                 <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sakai-maven2-snapshots</id>
+            <name>Sakai Maven Repo</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
             </snapshots>
         </repository>
         <repository>
@@ -134,73 +208,15 @@
             <name>Maven Repository Switchboard</name>
             <layout>default</layout>
             <url>http://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </repository>
     </repositories>
-    <distributionManagement>
-        <repository>
-            <id>sakai-maven2</id>
-            <name>Sakaiproject Maven 2 repository</name>
-            <url>dav:https://source.sakaiproject.org/maven2</url>
-        </repository>
-        <snapshotRepository>
-            <id>sakai-maven2-snapshots</id>
-            <name>Sakaiproject Maven 2 repository</name>
-            <url>dav:https://source.sakaiproject.org/maven2-snapshots</url>
-	    <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-	<site>
-            <id>local site</id>
-            <url>file:/tmp/entitybroker/site/</url>
-        </site>
-    </distributionManagement>
-    <issueManagement>
-        <system>JIRA</system>
-        <url>http://jira.sakaiproject.org/jira/browse/SAK</url>
-    </issueManagement>
-    <ciManagement>
-        <system>Continuum</system>
-        <url>http://saffron.caret.cam.ac.uk/continuum</url>
-        <notifiers>
-            <notifier>
-                <type>mail</type>
-                <sendOnError>true</sendOnError>
-                <sendOnFailure>true</sendOnFailure>
-                <sendOnSuccess>false</sendOnSuccess>
-                <sendOnWarning>false</sendOnWarning>
-                <configuration>
-                    <address>aaron@caret.cam.ac.uk</address>
-                </configuration>
-            </notifier>
-            <notifier>
-                <type>mail</type>
-                <sendOnError>true</sendOnError>
-                <sendOnFailure>true</sendOnFailure>
-                <sendOnSuccess>false</sendOnSuccess>
-                <sendOnWarning>false</sendOnWarning>
-                <configuration>
-                    <address>antranig@caret.cam.ac.uk</address>
-                </configuration>
-            </notifier>
-        </notifiers>
-    </ciManagement>
-<!-- define the license -->
-    <licenses>
-        <license>
-            <name>Educational Community License, Version 2.0</name>
-            <url>http://www.osedu.org/licenses/ECL-2.0</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-<!-- define source code repository location -->
-    <scm>
-        <connection>scm:svn:https://source.sakaiproject.org/svn/entitybroker/branches/sakai_2-6-x</connection>
-        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/entitybroker/branches/sakai_2-6-x</developerConnection>
-        <url>https://source.sakaiproject.org/viewsvn/entitybroker/</url>
-    </scm>
-<!-- handles the management of entitybroker related dependencies -->
+      
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -246,14 +262,14 @@
                 <groupId>org.sakaiproject</groupId>
                 <artifactId>generic-dao</artifactId>
                 <version>0.9.12</version>
-<!--                <version>[0.9.11,1.0.0)</version>-->
+                <!-- <version>[0.9.11,1.0.0)</version> -->
             </dependency>
             <dependency>
                 <groupId>org.azeckoski</groupId>
                 <artifactId>reflectutils</artifactId>
                 <version>0.9.11</version>
             </dependency>
-<!-- testing -->
+            <!-- testing -->
             <dependency>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty</artifactId>
@@ -282,9 +298,29 @@
                 <type>jar</type>
                 <scope>test</scope>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
+    
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <links>
+                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+                    </links>
+                    <breakiterator>true</breakiterator>
+                    <verbose>false</verbose>
+                    <aggregate>true</aggregate>
+                    <maxmemory>512m</maxmemory>
+                    <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <build>
         <pluginManagement>
@@ -296,5 +332,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
